<resources>
    <string name="app_name">Toefl</string>
    <string name="facebook_app_id">184515390095334</string>
    <string name="fb_login_protocol_scheme">fb184515390095334</string>
    <string name="sehat">Sehat</string>
    <string name="label_q">Q</string>
    <string name="sign_in_with_facebook">Sign in With Facebook</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="sign_up">Dont have an account?</string>
    <string name="sign_here">Signup here</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="invalid_username">Username not valid</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed, please check your username and password</string>
    <string name="login_success">Login Success</string>
    <string name="login_facebook_cancel">Facebook Login cancel</string>
    <string name="login_google_failed">Google Login failed</string>
    <string name="menu_home">Home</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="label_hint_search_product">Search Product...</string>
    <string name="label_your_purchase_history">Purchase History</string>
    <string name="you_haven_t_bought_anything_yet">You haven\'t bought anything yet :(</string>
    <string name="no_network_connectivity">No Connectivity</string>
    <string name="dummy_name">Muhammad Ihsan Ashari</string>
    <string name="dummy_nim">171011401469</string>
    <string name="label_about">About</string>
    <string name="label_practice">Practice</string>
    <string name="label_testing">Testing</string>
    <string name="label_pre_test">Pre Test</string>
    <string name="label_post_test">Post Test</string>
    <string name="label_download">Download</string>
    <string name="label_scores">Scores</string>
    <string name="label_directions">Directions</string>
    <string name="label_directions_practice"><![CDATA[in this practice menu you can do exercises on questions based on their type (Listening, Reading Structure). You can do it repeatedly, the value in practice is not saved]]></string>
    <string name="type_of_exercise">Type Of Exercise</string>
    <string name="easy_passage">Easy Passage</string>
    <string name="medium_passages">Medium Passages</string>
    <string name="hard_passages">Difficult Passages</string>
    <string name="one_clause">One Clause</string>
    <string name="multiple_clauses">Multiple Clauses</string>
    <string name="more_multiple_clauses">More Multiple Clauses</string>
    <string name="reduced_clause">Reduced Clause</string>
    <string name="inverted_subject_and_verb">Inverted Subject and Verb</string>
    <string name="exit_section">Exit Section</string>
    <string name="passage">(PASSAGE)</string>
    <string name="question">Question :</string>
    <string name="sort_dialog">Sort Dialog</string>
    <string name="casual_conversation">Casual Conversation</string>
    <string name="academic_discussion">Academic Discussion</string>
    <string name="academic_lectures">Academic Lectures</string>
    <string name="format_question_count">Question: %d/%d</string>
    <string name="previous">Previous</string>
    <string name="format_remaining">-%s</string>
    <string name="text_your_score">Your Score!</string>
    <string name="main_menu">Main Menu</string>
    <string name="selesai">Selesai</string>
    <string name="next">Next</string>
    <string name="label_your_chance">Your Chance :</string>
    <string name="exit">Exit</string>
    <string name="next_session">Next Session</string>
    <string name="are_you_sure_you_want_to_nexit_this_session">Are you sure you want to\nexit this session?</string>
    <string name="your_score_is_not_saved">your score is not saved</string>
    <string name="pre_test_direction">In the pretest menu you are only given the opportunity 3 times to do the TOEFL practice questions. In this session your score will be saved</string>
    <string name="post_test_direction">In the post test menu you are only given the opportunity 3 times to do the TOEFL practice questions. In this session your score will be saved</string>
    <string name="preparing_local_database">Preparing Local Database ..</string>
    <string name="listening_session_complete">Listening session is complete,\npress the button to continue to\nthe next session</string>
    <string name="reading_session_complete">Reading session is complete,\npress the button to continue to\nthe next session</string>
    <string name="all_session_complete">All session is complete,\npress the button to continue to\nthe next session</string>
    <string name="finish">finish</string>
    <string name="listening">Listening</string>
    <string name="reading">Reading</string>
    <string name="structure">Structure</string>
    <string name="complete_test_toefl_1">Complete Test TOEFL 1</string>
    <string name="complete_test_toefl_2">Complete Test TOEFL 2</string>
    <string name="text_score_landing">On the score menu you can see the history of the scores from the practice questions that are done.</string>
    <string name="complete_test_2">Complete Test 2</string>
    <string name="complete_test_1">Complete Test 1</string>
    <string name="individual_test_structure">Individual Test Structure</string>
    <string name="individual_test_reading">Individual Test Reading</string>
    <string name="individual_test_listening">Individual Test Listening</string>
    <string name="practice_structure">Practice Structure</string>
    <string name="practice_reading">Practice Reading</string>
    <string name="practice_listening">Practice Listening</string>
    <string name="reset_score">Reset Score</string>
    <string name="muhamad_ihsan_ashari">Muhamad Ihsan Ashari</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="NIM">171011401469</string>
    <string name="gelombang_12">Gelombang 12</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="toefl_simulation_is_an_android_based_toefl_training_application_the_scoring_system_in_this_simulation_is_adopted_from_paper_based_toefl_prediction_pbt">TOEFL Simulation is an Android-based TOEFL training application, the scoring system in this simulation is adopted from paper-based TOEFL prediction (PBT).</string>
    <string name="testing">Testing</string>
    <string name="materials">Materials</string>
    <string name="nilai_post_test">Nilai Post Test</string>
    <string name="nilai_pre_test">Nilai Pre Test</string>
    <string name="score">Score : </string>

</resources>