<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.fastwork.toefl.ui.practice.PracticeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/back"
                android:src="@drawable/ic_vector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/label_practice"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_directions_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_directions"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/direction_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/label_directions_practice"
                    android:textColor="#282A3A"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_directions_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/type_of_exercise"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/direction_message" />

                <HorizontalScrollView
                    android:id="@+id/parent_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_type">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:layout_width="wrap_content"
                            android:id="@+id/btn_listening"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_listening" />

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:layout_width="wrap_content"
                            android:id="@+id/btn_reading"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_reading" />

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:layout_width="wrap_content"
                            android:id="@+id/btn_structure"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_structure" />


                    </androidx.appcompat.widget.LinearLayoutCompat>


                </HorizontalScrollView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/parent_reading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/parent_type">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_easy_passage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/easy_passage"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_medium_passage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/medium_passages"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_hard_passage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/hard_passages"
                        android:textAllCaps="false" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/parent_structure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/parent_type">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_one_clause"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/one_clause"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_multiple_clause"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/multiple_clauses"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_more_multiple_clause"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/more_multiple_clauses"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_reduce_clauses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/reduced_clause"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_inverted_subject_verb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/inverted_subject_and_verb"
                        android:textAllCaps="false" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/parent_listening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/parent_type">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_sort_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/sort_dialog"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_casual_discussion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/casual_conversation"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_academic_discussion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/academic_discussion"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_academic_lectures"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_purple_light"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/academic_lectures"
                        android:textAllCaps="false" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
